sort.basic.lessons.sort.basic.cocktail.AlgCocktailSort1.scala.error
AlgCocktailSort1:18: error: not found: value i
	while(!echange(i,i+1))
                       ^